<?xml version="1.0" encoding="utf-8"?>
<rs.cc.ui.widgets.InputConfigView xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/widget_padding" >

    <LinearLayout
        android:id="@+id/v_key_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/widget_padding"
        android:orientation="horizontal" >

        <Switch
            android:id="@+id/sw_keyboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/widget_padding"
            android:layout_weight="1"
            android:text="@string/keyboard" />

        <ImageView
            android:id="@+id/iv_key_setup"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_menu_settings" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/v_hw_key_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/widget_padding"
        android:orientation="horizontal" >
    
    <Switch
        android:id="@+id/sw_hwkeyboard"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginEnd="@dimen/widget_padding"
        android:layout_height="wrap_content"
        android:text="@string/hw_keyboard" />
        <ImageView
            android:id="@+id/iv_hwkey_setup"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_menu_settings" />
    </LinearLayout>
    
    <Switch
        android:id="@+id/sw_pointer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/widget_padding"
        android:text="@string/pointer" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scaner" />

    <cs.ui.widgets.DialogSpinner
        android:id="@+id/lv_scaner_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_padding" />

    <LinearLayout
        android:id="@+id/v_scaner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="0dp"
        android:paddingStart="@dimen/widget_padding" >

        <LinearLayout
            android:id="@+id/v_bt_scaner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:labelFor="@+id/ed_scaner_address"
                android:text="@string/scaner_address" />

            <EditText
                android:id="@+id/ed_scaner_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_menu_select_folder"
                android:inputType="text" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scaner_server_type" />

        <cs.ui.widgets.DialogSpinner
            android:id="@+id/lv_server_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/v_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="0dp"
            
            android:paddingStart="@dimen/widget_padding" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/widget_padding"
                android:labelFor="@+id/ed_scaner_port"
                android:text="@string/scaner_port_rdp" />

            <EditText
                android:id="@+id/ed_scaner_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:inputType="number" />
        </LinearLayout>

        <!-- TextView
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_padding"
            android:drawableEnd="@drawable/ic_menu_settings"
            android:drawablePadding="@dimen/widget_padding"
            android:id="@+id/v_scenario"
            android:text="@string/barcode_scenario" / -->
    </LinearLayout>

</rs.cc.ui.widgets.InputConfigView>