<?xml version="1.0" encoding="utf-8"?>
<rs.cc.ui.widgets.PrinterConfigView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/widget_padding" >

    <Switch
        android:id="@+id/sw_printer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/widget_padding"
        android:text="@string/printer" />

    <LinearLayout
        android:id="@+id/v_printer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:labelFor="@+id/ed_printer_address"
            android:text="@string/scaner_address" />

        <EditText
            android:id="@+id/ed_printer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/widget_padding"
            android:drawableEnd="@drawable/ic_menu_select_folder"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/widget_padding"
                android:labelFor="@+id/ed_printer_port"
                android:text="@string/scaner_port_rdp" />

            <EditText
                android:id="@+id/ed_printer_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

</rs.cc.ui.widgets.PrinterConfigView>